# ImageDithering

./: .gitignore  CMakeLists.txt  README.md  main.cpp
algs/: dithering.cpp
cmake/: raylib.cmake  raylibOptions.cmake
scripts/: 1bit.lua  1bitPerChanel.lua
src/algorithms/: dithering.cpp  luaalgorithm.cpp
src/gui/: raygui.cpp
src/include/: dithering.h  luaalgorithm.h
